# Fuel-BE

./: README.md
backend/: .env  Cargo.toml  check_fuel_prices.rs  check_users.rs
backend/migrations/: 20250723060449_create_users_table.sql  20250723060500_create_brand_table.sql.sql  20250726010837_create_spbu_table.sql  20250730134000_create_services_table.sql  20250804000000_create_wishlists_table.sql  20250804000001_add_wishlist_trigger.sql  20250804031751_create_spbu_services_pivot.sql  20250806000000_create_reviews_table.sql  20250808000000_create_transactions_table.sql  20250808000001_create_fuel_prices_table.sql  20250815000000_seed_fuel_prices.sql  20250819000000_add_transaction_status_enum.sql
backend/scripts/: check_spbus.rs  check_users.rs  check_users_schema.rs  create_test_user.rs
backend/src/: app_state.rs  auth.rs  check_spbu.rs  db.rs  main.rs  types.rs
backend/src/handlers/: brand.rs  mod.rs  review.rs  service.rs  spbu.rs  spbu_service.rs  transaction.rs  user.rs  wishlist.rs
backend/src/middleware/: auth.rs
backend/src/models/: brand.rs  mod.rs  review.rs  service.rs  spbu.rs  spbu_service.rs  transaction.rs  user.rs  wishlist.rs
backend/src/requests/: user.rs
