[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = { version = "0.15", optional = true }
axum-extra = "0.7"
argon2 = "0.5" 
password-hash = "0.5"
rand_core = "0.6"
bcrypt = "0.15"

[features]
default = ["dotenv"]

[[bin]]
name = "check_users"
path = "scripts/check_users.rs"
required-features = ["dotenv"]

[[bin]]
name = "create_test_user"
path = "scripts/create_test_user.rs"
required-features = ["dotenv"]

[[bin]]
name = "check_users_schema"
path = "scripts/check_users_schema.rs"
required-features = ["dotenv"]

[[bin]]
name = "check_spbus"
path = "scripts/check_spbus.rs"
required-features = ["dotenv"]
