[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
dotenv = { version = "0.15.0", optional = true }
hyper = { version = "1.0.1", features = ["full"] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "macros"
] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
chrono = { version = "0.4.35", features = ["serde", "clock"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
bigdecimal = { version = "0.4.5", features = ["serde"] }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
jsonwebtoken = "9.3.0"
thiserror = "1.0.57"
headers = "0.3.9"
rand_core = "0.6.4"
bcrypt = "0.15.1"
hex = "0.4.3"
sha2 = "0.10.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["dotenv"]

[[bin]]
name = "check_users"
path = "scripts/check_users.rs"
required-features = ["dotenv"]

[[bin]]
name = "create_test_user"
path = "scripts/create_test_user.rs"
required-features = ["dotenv"]

[[bin]]
name = "check_users_schema"
path = "scripts/check_users_schema.rs"
required-features = ["dotenv"]

[[bin]]
name = "check_spbus"
path = "scripts/check_spbus.rs"
required-features = ["dotenv"]
